--- a/src/frontend/src/styles.css
+++ b/src/frontend/src/styles.css
@@ -43,3 +43,19 @@
   background: lightblue;
   font-size: 14px;
 }
+
+#header {
+  margin: 10px;
+  padding-left: 0px;
+}
+
+.headerButton {
+  width: 200px;
+  margin-left: 5px;
+  margin-right: 5px;
+  padding: 4px;
+}
+
+.headerButtonUnselected {
+  background-color: #aaa;
+}
