--- a/src/frontend/src/styles.css
+++ b/src/frontend/src/styles.css
@@ -109,3 +109,20 @@
 .uploadContentContentLabel {
   align-self: flex-start;
 }
+
+
+/* Pagination */
+.paginationInformation {
+  margin-left: 10px;
+  margin-right: 10px;
+}
+
+.paginationPagesLink {
+  margin-left: 5px;
+  margin-right: 5px;
+  font-size: larger;
+}
+
+.paginationPagesLinkCurrent {
+  font-weight: bold;
+}
